test/conformance/chainsaw/generating-policies/existing/basic-generate-clone/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: basic-generate-clone
