test/conformance/chainsaw/generating-policies/existing/basic-generate-clone/source.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: basic-generate-clone-1
  namespace: default
type: Opaque
--- 
apiVersion: v1
data:
  key: dmFsdWU=
kind: Secret
metadata:
  name: basic-generate-clone-2
  namespace: default
type: Opaque
---
apiVersion: v1
data:
  color: Ymx1ZQ==
kind: Secret
metadata:
  name: basic-generate-clone-3
  namespace: default
type: Opaque
