test/conformance/chainsaw/generating-policies/existing/basic-generate-clone/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: basic-generate-clone
spec:
  steps:
  - name: create permissions
    try:
    - apply:
        file: permissions.yaml
  - name: create the source
    try:
    - apply:
        file: source.yaml
  - name: create the existing trigger
    try:
    - apply:
        file: namespace.yaml
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-generating-policy-ready
    use:
      template: ../../../_step-templates/generating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: basic-generate-clone
  - name: check that secrets are generated in the existing namespace
    try:
    - assert:
        file: downstream-assert.yaml
        timeout: 30s
